<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Favorite.FavDetailActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/purple_500">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/app_name"
                app:layout_constraintBottom_toBottomOf="@+id/bts_repository"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_baseline_favorite_border_24" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/photo_avatar"
                android:layout_width="150dp"
                android:layout_height="120dp"
                android:layout_marginTop="24dp"
                app:civ_border_color="#2a953e"
                app:civ_border_width="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/bts_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/username"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/photo_avatar" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:src="@drawable/username1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bts_username" />

            <TextView
                android:id="@+id/bts_namefull"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:text="@string/nameavatar"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/bts_username" />

            <ImageView
                android:id="@+id/imageView_lokasi"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:adjustViewBounds="true"
                android:src="@drawable/lokasi"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bts_namefull" />

            <TextView
                android:id="@+id/bts_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/location"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="normal"
                app:layout_constraintStart_toEndOf="@+id/imageView_lokasi"
                app:layout_constraintTop_toBottomOf="@+id/bts_namefull" />

            <ImageView
                android:id="@+id/imageView_company"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:adjustViewBounds="true"
                android:src="@drawable/company1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bts_location" />

            <TextView
                android:id="@+id/bts_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/company"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="normal"
                app:layout_constraintStart_toEndOf="@+id/imageView_company"
                app:layout_constraintTop_toBottomOf="@+id/bts_location" />

            <TextView
                android:id="@+id/bts_tittle_repository"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/repository"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bts_company" />
            <TextView
                android:id="@+id/bts_repository"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/repository"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bts_tittle_repository" />


            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabslayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/teal_200"
                android:minHeight="?actionBarSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bts_repository"
                app:tabSelectedTextColor="@color/purple_500"
                app:tabTextColor="@color/white"
                tools:ignore="MissingConstraints" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/tabslayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>